--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,10 @@ environment:
 # versions available, run `flutter pub outdated`.
 
 dependencies:
-  firebase_auth: ^1.0.1
-  font_awesome_flutter: ^8.11.0
+  firebase_auth: ^1.3.1
+
+
+  font_awesome_flutter: ^10.1.0
   google_sign_in: ^5.0.0
   firebase_core: ^1.4.0
   flutter:
@@ -39,6 +41,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  curved_navigation_bar: ^1.0.3
+
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +70,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets:
+    - assets/images/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
